syntax="proto3";
//
message VmOption {  
 string name=1;
 string value=2;
 bool writeable=3;
 string origin=4;
}
